--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Etch-a-Sketch</title>
         <link rel="stylesheet" href="./style.css">
-        <script src="./scipt.js" defer></script>
+        <script src="./script.js" defer></script>
     </head>
     <body>
         <h1>ETCH a SKETCH</h1>
+        <div class="container" id="main-container"></div>
+        <div class="grid-container" id="main-grid-container"></div>
     </body>
 </html>
