Checkpoint save: EaS project logic almost done. Next step - grid generation to keep fixed dimension.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <body>
         <h1>ETCH a SKETCH</h1>
         <div class="container" id="main-container"></div>
+        <button class="buttons" id="btn-generate-grid">SET NEW GRID</button>
         <div class="grid-container" id="main-grid-container"></div>
+        
     </body>
 </html>
