Checkpoint save: EaS project done - minor typo fix.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <script src="./script.js" defer></script>
     </head>
     <body>
-        <h1>ETCH a SKETCH</h1>
+        <h1>ETCH a SKETCH 🎨</h1>
         <div class="container" id="main-container"></div>
-        <button class="buttons" id="btn-generate-grid">SET NEW GRID</button>
+        <button class="buttons" id="btn-generate-grid"><img src="./images/grid-2.svg" height="20px">SET NEW GRID</button>
         <div class="grid-container" id="main-grid-container"></div>
         
     </body>
