--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <body>
         <h1>ETCH a SKETCH 🎨</h1>
         <div class="container" id="main-container"></div>
+        <div class="all-buttons">
         <button class="buttons" id="btn-generate-grid"><img src="./images/grid-2.svg" height="20px">SET NEW GRID</button>
+        <button class="buttons" id="btn-generate-grid2"><img src="./images/color-palette.svg" height="20px">Randomize Grid Color</button>
+        </div>
         <div class="grid-container" id="main-grid-container"></div>
         
     </body>
