Checkpoint save: EaS project 100% done. - Added reset button bellow grid to clear sketch but keep user grid settings. - Edited reset button text.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button class="buttons" id="btn-generate-grid2"><img src="./images/color-palette.svg" height="20px">Randomize Grid Color</button>
         </div>
         <div class="grid-container" id="main-grid-container"></div>
-        <button class="buttons" id="btn-reset-grid">Reset</button>
+        <button class="buttons" id="btn-reset-grid">Reset Sketch</button>
         
     </body>
 </html>
